--- a/config/config.yaml
+++ b/config/config.yaml
@@ -6,3 +6,29 @@ data_ingestion:
   source_URL: https://github.com/abrahamowodunni/DATA/blob/master/fraudTrain.zip
   local_data_file: artifacts/data_ingestion/data.zip
   unzip_dir: artifacts/data_ingestion
+
+data_validation:
+  root_dir: artifacts/data_validation
+  unzip_data_dir: artifacts/data_ingestion/fraudTrain.csv
+  STATUS_FILE: artifacts/data_validation/status.txt
+
+
+### I need to make changes in my transformation process. 
+data_transformation:
+  root_dir: artifacts/data_transformation
+  data_path: artifacts/data_ingestion/fraudTrain.csv
+  test_size: 0.2
+  bins: [0, 4, 6, 10]
+  labels: ['low', 'medium', 'high']
+
+model_trainer:
+  root_dir: artifacts/model_trainer
+  train_data_path: artifacts/data_transformation/train.csv
+  test_data_path: artifacts/data_transformation/test.csv
+  model_name: model.joblib
+  
+model_evaluation:
+  root_dir: artifacts/model_evaluation
+  test_data_path: artifacts/data_transformation/test.csv
+  model_path: artifacts/model_trainer/model.joblib
+  metric_file_name: artifacts/model_evaluation/metrics.json
