--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,4 @@
 XGBClassifier: 
-  n_estimators: 1 
-  max_depth: 10
-  min_samples_split: 100
-  min_samples_leaf: 2
-  max_features: 2
-  class_weight: 2
+  learning_rate: 0.6
+  n_estimators: 400
+  max_depth: 8
