--- a/config/config.yaml
+++ b/config/config.yaml
@@ -32,3 +32,6 @@ model_evaluation:
   test_data_path: artifacts/data_transformation/test.csv
   model_path: artifacts/model_trainer/model.joblib
   metric_file_name: artifacts/model_evaluation/metrics.json
+  optimal_metric_file_name: artifacts/model_evaluation/optimal_metrics.json  
+  fraud_metric_file_name: artifacts/model_evaluation/fraud_metrics.json  
+  roc_curve_file_name: artifacts/model_evaluation/roc_curve.png  
